# simurom

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.cargo/: config.toml
.config/simurom/: simurom.toml
apps/flatfekt-cli/src/: main.rs
apps/flatfekt-viewer/src/: main.rs
apps/flatfekt/src/: main.rs  ui.rs
apps/simurom/: Cargo.toml
apps/simurom-character-cli/: Cargo.toml
apps/simurom-character-cli/src/: main.rs
apps/simurom-cli/: Cargo.toml
apps/simurom-cli/src/: main.rs
apps/simurom-viewer/: Cargo.toml
apps/simurom-viewer/src/: main.rs
apps/simurom/src/: main.rs  ui.rs
assets/effects/: bw_overlay.wgsl  grayscale.wgsl  sepia.wgsl
assets/mini_game/characters/: blonde.toml  main_character.toml
assets/simurom/shaders/: grayscale.frag  invert.wgsl  postprocess.wgsl
crates/flatfekt-config/src/: lib.rs
crates/simurom-assets/: Cargo.toml
crates/simurom-assets/src/: lib.rs  pack.rs  resolve.rs
crates/simurom-config/: Cargo.toml
crates/simurom-runtime/: Cargo.toml  test_output.txt
crates/simurom-runtime/src/: agents.rs  aggregate.rs  animation.rs  character_systems.rs  headless_timeline.rs  interaction.rs  lib.rs  rapier_backend.rs  render_effects.rs  simulation.rs  test_compilation.rs
crates/simurom-runtime/tests/: rapier_repeatability.rs  render_order.rs  sim_determinism.rs  sim_primitives_determinism.rs  sim_repeatability.rs  smoke.rs  text_instantiation.rs  timeline_determinism.rs
crates/simurom-schema/: Cargo.toml
crates/simurom-schema/benches/: scene_load.rs
crates/simurom-schema/examples/: dump_schema.rs
crates/simurom-schema/src/: character.rs  lib.rs
crates/simurom-schema/tests/: fixtures.rs
crates/simurom-workspace-checks/: Cargo.toml
demos/: 01_hello_world.toml  02_physics_playground.toml  03_interactive_clicker.toml
demos/mini_game/: blonde_demo.toml  character_demo.toml  game_backyard.toml  game_living_room.toml  game_room.toml  intro_studio1.toml  intro_studio2.toml  main_menu.toml  room_interaction.toml  room_movement.toml
docs/: architecture.md  dependencies.md  platform.md
docs/roadmaps/: README.md  animation-roadmap.md  assets-roadmap.md  core-roadmap.md  interaction-roadmap.md  rendering-roadmap.md  runtime-roadmap.md  schema-roadmap.md  tooling-roadmap.md  ui-roadmap.md
docs/tranches/: 2026-04-16-tranche-005-code-layout.md  2026-04-16-tranche-010-basic-scaffolding.md  2026-04-16-tranche-013-mode-cache-config-dirs-roadmap.md  2026-04-16-tranche-014-core-10-items.md  2026-04-17-tranche-026-testing-tooling.md  2026-04-17-tranche-027-text-assets.md  2026-04-17-tranche-028-simulation.md  2026-04-17-tranche-029-interaction.md  2026-04-17-tranche-030-agents-scripting.md  2026-04-17-tranche-031-export.md  2026-04-18-tranche-033-cargo-run-default.md  2026-04-18-tranche-048-physics-simulation.md  2026-04-18-tranche-049-simulation-baking.md  2026-04-18-tranche-050-firstclass-bake-play-bake.md  2026-04-18-tranche-051-simurom-egui-timeline-scrubber.md  2026-04-19-tranche-053-export-mp4.md  2026-04-26-tranche-artifact-promotion-playback.md  2026-04-27-tranche-export-duration-defaults-and-shaders.md  2026-05-16-tranche-059-fix-windows-assets-and-text-popups.md  2026-05-17-tranche-060-egui-timeline-keyboard-toggle.md  2026-05-17-tranche-061-debug-mode-low-latency-present-fps-limiter.md  2026-05-18-tranche-062-rust-character-cli-tool.md
scenes/: demo.toml  shader_test.toml  shader_test_glsl.toml
scratch/: analyze_brows.py  analyze_eyes.py  analyze_head_composition.py  check_eyebrow_content.py  check_raw_eyebrows.py  check_wgpu.rs  compare_bases_keyed.py  compare_tmp_assets.py  create_fit_grid.py  crop_original_face.py  debug_hair_overlay.py  detect_eyes_in_base.py  extract_gif_frames.py  find_bboxes.py  find_difference_mask.py  find_eye_centers.py  find_optimal_eyebrow_y.py  find_optimal_hair_fit.py  find_perfect_hair_alignment.py  find_perfect_hair_alignment_pil.py  find_solid_regions.py  generate_eyes_blinking_gif.py  inspect_composite_brows_top.py  inspect_composite_full.py  inspect_corners.py  inspect_eyebrows_source.py  inspect_eyes_image.py  inspect_toml_parse.py  inspect_toml_parse.rs  key_brows_smart.py  optimize_eye_fit.py  preview_composite_with_brows.py  print_bg_pixels.py  refine_fit.py  simulate_rust_compositor.py  test_hair_layering.py  test_rotated_placement.py  visualize_grid.py
scripts/: character_preview.py  scratch.py  scratch10.py  scratch11.py  scratch12.py  scratch2.py  scratch4.py  scratch5.py  scratch6.py  scratch7.py  scratch8.py  scratch9.py
tools/character-assembler/: README.md  align_hair.py  analyze_face.py  analyze_face_colors.py  analyze_face_diff.py  analyze_frame_eyebrows.py  analyze_hair_scale.py  analyze_tmp.py  check_assets_sizes.py  check_column.py  check_eyes_alpha_detailed.py  check_eyes_content.py  check_frame_transparency.py  check_hair_shapes.py  check_sizes.py  compare_bboxes.py  compare_different_scales.py  compare_hair_heads.py  copy_artifacts.py  crop_eyes_raw.py  crop_no_eyes_face.py  debug_fast_diff.py  detect_face_details.py  find_base_bbox.py  find_best_fit.py  find_brows_in_preview.py  find_exact_iou.py  find_eyes_bbox.py  find_features.py  find_original_eye_placement.py  find_perfect_hair_alignment_fast.py  find_skin.py  inspect_hair_mask.py  inspect_new_assets.py  key_eyebrows.py  main.py  make_blonde_transparent.py  optimize_brows_fit.py  preview_brows_composite.py  preview_eyes_brows.py  (+8 more)
(+8 files in other folders)
