[workspace]
resolver = "3"
members = ["apps/*", "crates/*"]
default-members = ["apps/simurom"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1.0.102"
bevy = { version = "0.18.1", features = ["shader_format_glsl", "jpeg", "png"] }
bevy_camera = "0.18.1"
bevy_mesh = "0.18.1"
bevy_shader = "0.18.1"
bevy_sprite_render = "0.18.1"
bevy_egui = "0.39.1"
bevy-inspector-egui = "0.36.0"
bevy_rapier2d = "0.33.0"
clap = { version = "4.6.1", features = ["derive", "env"] }
pollster = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
thiserror = "2.0.18"
toml = "1.1.2"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
tempfile = "3.27.0"
assert_cmd = "2.2.1"
predicates = "3.1.4"
wgpu = "29.0.1"
xxhash-rust = { version = "0.8.15", features = ["xxh64"] }

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
