[package]
name = "simurom-character-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "simurom-character-cli"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
image = { version = "0.25.10", default-features = false, features = ["png", "gif"] }
simurom-schema = { path = "../../crates/simurom-schema" }
