[package]
name = "simurom-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "simurom-cli"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
serde.workspace = true
simurom-config = { path = "../../crates/simurom-config" }
simurom-runtime = { path = "../../crates/simurom-runtime" }
simurom-schema = { path = "../../crates/simurom-schema" }
simurom-assets = { path = "../../crates/simurom-assets" }
