[package]
name = "simurom-viewer"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
bevy.workspace = true
bevy-inspector-egui.workspace = true
bevy_egui.workspace = true
pollster.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
wgpu.workspace = true

simurom-config = { path = "../../crates/simurom-config" }
simurom-runtime = { path = "../../crates/simurom-runtime" }
simurom-schema = { path = "../../crates/simurom-schema" }
