[package]
name = "simurom"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
wgpu.workspace = true
pollster.workspace = true
bevy.workspace = true
bevy_egui.workspace = true
bevy-inspector-egui.workspace = true
serde_json.workspace = true

simurom-config = { path = "../../crates/simurom-config" }
simurom-runtime = { path = "../../crates/simurom-runtime" }
simurom-schema = { path = "../../crates/simurom-schema" }

[features]
gpu_tests = []

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
