[package]
name = "simurom-assets"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
thiserror.workspace = true
naga = { version = "29.0.1", features = ["wgsl-in"] }

simurom-config = { path = "../simurom-config" }
simurom-schema = { path = "../simurom-schema" }

[features]
bevy = ["dep:bevy"]

[dependencies.bevy]
workspace = true
optional = true
