[package]
name = "simurom-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
xxhash-rust.workspace = true
bevy.workspace = true
bevy_camera.workspace = true
bevy_mesh.workspace = true
bevy_shader.workspace = true
bevy_sprite_render.workspace = true
bevy_rapier2d = { workspace = true, optional = true }

simurom-config = { path = "../simurom-config" }
simurom-schema = { path = "../simurom-schema" }
simurom-assets = { path = "../simurom-assets", features = ["bevy"] }
toml.workspace = true
notify = "8.2.0"
crossbeam-channel = "0.5.15"

[features]
physics_rapier2d = ["dep:bevy_rapier2d"]

[dev-dependencies]
tempfile.workspace = true
