[package]
name = "simurom-schema"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
schemars = "0.8"
strsim = "0.11"

[dev-dependencies]
serde_json = "1.0"

[[bench]]
name = "scene_load"
harness = false
